--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,12 @@
 body {
-    background-image: url ("assets/images/noisy_net.jpg");
+    background-image: url("../images/noisy_net.png");
+    
+    height: 100%;
+    width: 100%;
+    margin: 0 auto;
 }
+
+
 
 h1 {
     font-weight: bold;
